fixed message send button on mobile

--- a/src/pages/messenger/Messenger.css
+++ b/src/pages/messenger/Messenger.css
@@ -157,7 +157,7 @@
     border: 2px solid lightgray;
     padding-left: 5px;
     padding-top: 3px;
-
+    cursor: pointer;
     margin: 5px;
 }
 
